# skill_bucket

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md  hotfix.md  tests.md
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/models/: activities.py  activity_evidence.py  base.py  frameworks.py  knowledge_chunks.py
docs/: CONTRIBUTING.md  architecture.md
infra/: compose.yaml
